# animactory

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/include/animactory/: Factory.h
code/lib/: Factory.cc
